[tool.poetry]
name = "cfw"
version = "0.1.0"
description = "CFW (Cyber Firewall) is a human friendly Linux firewall."
authors = ["Cyberbolt <dtconlyone@gmail.com>, Potato-OvO <1224141267@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
