[tool.poetry]
name = "cfw"
version = "0.1.0"
description = "CFW (Cyber Firewall) is a human friendly Linux firewall."
authors = ["Cyberbolt <dtconlyone@gmail.com>, Potato-OvO <1224141267@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pyyaml = "^6.0"
apscheduler = "^3.9.1"

[[tool.poetry.source]]
name = "aliyun"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
